--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
    <script>
-              window.location.href="http://zhixiang.org.cn"; 
+              window.location.href="http://shiyujun.cn"; 
     </script>
 
 </head>
